<resources>
    <string name="app_name">我的哔哩</string>
    <string name="double_click_exit_app">再按一次退出</string>
    <string name="network_exception">网络异常</string>
    <!--Splash Activity-->
    <string name="skip">跳过</string>
    <!--Main Activity-->
    <string name="home">首页</string>
    <string name="channel">频道</string>
    <string name="news">动态</string>
    <string name="mine">我的</string>
    <!--Alert Dialog-->
    <string name="alert_default_title">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>
