<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/bg_dialog_alert"
    android:elevation="1dp"
    android:minHeight="150dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:text="@string/alert_default_title"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="提示" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="52dp"
        android:textColor="@color/contentTextColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        tools:text="消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文消息正文" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Dialog.Button"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/cancel"
        android:textColor="@color/contentTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_confirm"
        tools:text="取消" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/Dialog.Button"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="确定" />
</android.support.constraint.ConstraintLayout>