<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/bg_center_item"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginBottom="12.5dp"
            android:background="@drawable/bg_tab_bar_center_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="@dimen/tab_bar_main_height"
            android:background="@drawable/bg_tab_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tab_channel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background">

            <ImageView
                android:id="@+id/ico_home"
                style="@style/main_tab_icon"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toTopOf="@id/txt_home"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_home"
                style="@style/main_tab_text"
                android:text="@string/home"
                app:layout_constraintTop_toBottomOf="@id/ico_home"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_channel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tab_live"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tab_home"
            app:layout_constraintTop_toTopOf="@id/background">

            <ImageView
                android:id="@+id/ico_channel"
                style="@style/main_tab_icon"
                android:src="@drawable/ic_channel"
                app:layout_constraintBottom_toTopOf="@id/txt_channel"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_channel"
                style="@style/main_tab_text"
                android:text="@string/channel"
                app:layout_constraintTop_toBottomOf="@id/ico_channel"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_live"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/bg_center_item"
            app:layout_constraintEnd_toStartOf="@id/tab_news"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tab_channel"
            app:layout_constraintTop_toTopOf="@id/bg_center_item">

            <ImageView
                android:id="@+id/ico_live"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_live_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_news"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tab_mine"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tab_live"
            app:layout_constraintTop_toTopOf="@id/background">

            <ImageView
                android:id="@+id/ico_news"
                style="@style/main_tab_icon"
                android:src="@drawable/ic_news"
                app:layout_constraintBottom_toTopOf="@id/txt_news"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_news"
                style="@style/main_tab_text"
                android:text="@string/news"
                app:layout_constraintTop_toBottomOf="@id/ico_news"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_mine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tab_news"
            app:layout_constraintTop_toTopOf="@id/background">

            <ImageView
                android:id="@+id/ico_mine"
                style="@style/main_tab_icon"
                android:src="@drawable/ic_mine"
                app:layout_constraintBottom_toTopOf="@id/txt_mine"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_mine"
                style="@style/main_tab_text"
                android:text="@string/mine"
                app:layout_constraintTop_toBottomOf="@id/ico_mine"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
